# quantalogic

./: .coveragerc  .env.example  .gitignore  .quantalogicrules  .windsurfrules  .windsurfrules.old  .windsurfrules2  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPORT_ANALYSIS.md  README.md  README_CN.md  README_DE.md  README_FR.md  REFERENCE_TOOLS.md  RELEASE_NOTES.MD  RELEASE_v0.94_SUMMARY.md  TODO.md  chapter1.txt  config.yml  conftest.py  debug_workflow.py  documentation.md  fix_internal_imports.py  generated_workflow.py  index.html  measure_performance.py  migrate_to_react.sh  performance_baseline_20250630_142115.txt  pyproject.toml  pyproject.toml.bak  report.md  requirements.txt  rollback_migration.sh  ruff.toml  simple_test.linkedin.md  simple_test.md  (+22 more)
quantalogic_codeact/: README.md  TODO.md  pyproject.toml
quantalogic_codeact/demo/: README.md  pyproject.toml
quantalogic_codeact/demo/demo/: __init__.py  tools.py
quantalogic_codeact/docs/: 01-quantalogic-toolbox.md  02-quantalogic-codeagent-memory.md  assessment.md  improvement_plan.md  logging-configuration.md
quantalogic_codeact/examples/: README.md
quantalogic_codeact/mcp_config/: config_cache.json  mcp.json
quantalogic_codeact/quantalogic_codeact/: __init__.py  __main__.py  cli.py  main.py  version.py
quantalogic_codeact/quantalogic_codeact/cli_commands/: config.py  config_constants.py  config_functions.py  config_load.py  config_manager.py  config_utils.py  create_toolbox.py  install_toolbox.py  list_executor.py  list_reasoners.py  list_toolboxes.py  task.py  tool_info.py  toolbox.py  uninstall_toolbox.py
quantalogic_codeact/quantalogic_codeact/codeact/: TODO.md  __init__.py  agent.py  agent_config.py  cli.py  codeact_agent.py  completion_evaluator.py  constants.py  conversation_history_manager.py  conversation_manager.py  events.py  executor.py  history_manager.py  llm_util.py  message.py  personality_config.py  plugin_manager.py  reasoner.py  task_management.py  templates.py  tools.py  tools_manager.py  working_memory.py  xml_utils.py
quantalogic_codeact/quantalogic_codeact/llm_util/: __init__.py  data.py  list_models.py  models.py  presentation.py
quantalogic_codeact/quantalogic_codeact/mcp_config/: mcp.json
quantalogic_codeact/quantalogic_codeact/shell/: __init__.py  __main__.py  agent_state.py  banner.py  command_registry.py  history_manager.py  shell.py  shell_state.py  utils.py
quantalogic_codeact/quantalogic_codeact/utils/: __init__.py  logging_config.py
quantalogic_flow/: AUTOMATIC_BRANCH_DEDUCTION.md  AUTOMATIC_CONVERGENCE.md  CHANGELOG.md  DUALITY_ARCHITECTURE.md  LLM_PROVIDERS.md  README.md  RELEASE_COMPLETE.md  RELEASE_SUMMARY.md  TEST_COVERAGE_REPORT.md  debug_branches.py  debug_branches_fixed.py  debug_converge.py  debug_generator.py  flow_yaml.md  pyproject.toml  pytest.ini  release_check.py  test_nested_loop_enhancements.py
quantalogic_flow/docs/: flow_fluent_api_v2.md
quantalogic_flow/docs/archive/: PARALLEL_EXECUTION_SUMMARY.md
quantalogic_flow/examples/: EXAMPLES_TABLE.md  README.md  poe_test.py
quantalogic_flow/examples/analyze_paper/: README.md  analyze_paper.py  requirements.txt  test_sample.extracted.md
quantalogic_flow/examples/create_tutorial/: README.md  create_tutorial.py  requirements.txt  spec_create_tutorial_tutorial.md
quantalogic_flow/examples/linkedin_introduce_content/: README.md  linkedin_introduce_content.py  requirements.txt  test_content.linkedin.md  test_content.md
quantalogic_flow/examples/pdf_to_markdown/: README.md  code_symb_planer_2503.01700v1.md  pdf_to_markdown.py
quantalogic_flow/examples/questions_and_answers/: README.linkedin.md  README.md  README_results.json  WORKFLOW_IMPROVEMENTS.md  question_and_anwsers.py  sample_markdown.md  sample_markdown_results.json
quantalogic_flow/examples/simple_story_generator/: README.md  story_generator_agent.py  story_generator_agent_external_template.py
quantalogic_flow/examples/story_generator/: story_generator_agent.py
quantalogic_flow/quantalogic_flow/: __init__.py
quantalogic_flow/quantalogic_flow/flow/: __init__.py  examples.py  flow.py  flow_extractor.py  flow_generator.py  flow_manager.py  flow_manager_schema.py  flow_mermaid.py  flow_modular.py  flow_original_backup.py  flow_validator.py  flow_validator_backup.py
quantalogic_flow/specs/: instructor_integration_analysis.md  poe_api_integration_spec.md
quantalogic_flow/tests/: __init__.py  conftest.py  test_flow_mermaid.py
quantalogic_flow/tests/examples/: __init__.py  test_analyze_paper.py  test_examples_validation.py
quantalogic_flow/tests/integration/: __init__.py  test_workflow_execution.py
quantalogic_flow/tests/mocks/: __init__.py  llm_responses.py
quantalogic_flow/tests/unit/: __init__.py  test_automatic_branch_deduction.py  test_automatic_convergence.py  test_events.py  test_flow_extractor.py  test_flow_extractor_comprehensive.py  test_flow_extractor_missing_coverage.py  test_flow_generator.py  test_flow_manager.py  test_flow_manager_comprehensive.py  test_flow_manager_critical_coverage.py  test_flow_manager_validation_edge_cases.py  test_flow_mermaid.py  test_flow_validator.py  test_flow_validator_comprehensive.py  test_nodes.py  test_parallel_execution.py  test_parallel_execution_edge_cases.py  test_parallel_execution_edge_cases.py.bak  test_simple_parallel.py  test_sub_workflow_validation_bug_fix.py  test_templates.py  test_workflow.py  test_workflow_engine.py  test_working_parallel.py
quantalogic_toolbox/: README.md  pyproject.toml
quantalogic_toolbox/quantalogic_toolbox/: __init__.py  tool.py
toolboxes/quantalogic-toolbox-files/: README.md  pyproject.toml
toolboxes/quantalogic-toolbox-files/quantalogic_toolbox_files/: __init__.py  tools.py
toolboxes/quantalogic-toolbox-math/: pyproject.toml
toolboxes/quantalogic-toolbox-math/quantalogic_toolbox_math/: __init__.py  tools.py
toolboxes/quantalogic-toolbox-mcp/: README.md  pyproject.toml
toolboxes/quantalogic_hacker_news/: README.md  pyproject.toml
toolboxes/quantalogic_planning_toolbox/: README.md  pyproject.toml
(+998 files in other folders)
