[tool.poetry]
name = "quantalogic"
version = "0.31.1"
description = "QuantaLogic ReAct Agents"
authors = ["Raphaël MANSUY <raphael.mansuy@gmail.com>"]
readme = "README.md"
packages = [{include = "quantalogic"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
litellm = "^1.56.4"
rich = "^13.9.4"
loguru = "^0.7.3"
boto3 = "^1.35.86"
tree-sitter-python = "^0.23.6"
tree-sitter = "^0.23.2"
tree-sitter-javascript = "^0.23.1"
tree-sitter-typescript = "^0.23.2"
tree-sitter-java = "^0.23.5"
tree-sitter-scala = "^0.23.4"
tree-sitter-go = "^0.23.4"
tree-sitter-rust = "^0.23.2"
tree-sitter-c = "^0.23.4"
tree-sitter-cpp = "^0.23.4"
markitdown = "^0.0.1a3"
prompt-toolkit = "^3.0.48"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
websocket = "^0.2.1"
tenacity = "^9.0.0"
google-auth = "^2.20.0"
pathspec = "^0.12.1"
click = "^8.1.8"
toml = "^0.10.2"
types-requests = "^2.32.0.20241016"
google-search-results = "^2.4.2"
serpapi = "^0.1.5"
duckduckgo-search = "^7.2.1"
mkdocs-material = {extras = ["imaging"], version = "^9.5.49"}
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.0"
pymdown-extensions = "^10.3.1"
llmlingua = "^0.2.2"
jinja2 = "^3.1.5"
beautifulsoup4 = "^4.12.3"
markdownify = "^0.14.1"
requests = "^2.32.3"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
networkx = "^3.4.2"
faker = "^33.3.1"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"

[tool.poetry.scripts]
quantalogic = "quantalogic.main:cli"
docs-serve = "quantalogic.docs_cli:serve_docs"
docs-build = "quantalogic.docs_cli:build_docs"
docs-deploy = "quantalogic.docs_cli:deploy_docs"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
litellm = "^1.55.9"
ollama = "^0.4.4"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["imaging"], version = "^9.5.49"}
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-macros-plugin = "^1.0.4"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.0"
pymdown-extensions = "^10.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["F", "E", "W", "I", "N", "UP", "ASYNC", "B", "A", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT"]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
addopts = "-v"
markers = [
    "integration: marks integration tests that require external services",
    "unit: marks unit tests"
]
testpaths = ["tests"]
