[tool.poetry]
name = "quantalogic-codeact"
version = "0.1.0"
description = "CodeAct Agent."
authors = ["Raphael Mansuy <raphae.mansuy@quantalogic.app>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=1.10,<3.0"
docstring-parser = ">=0.15,<1.0"
litellm = "^1.66.2"
loguru = "^0.7.3"
lxml = "^5.3.2"
quantalogic-toolbox = "^0.8.0"
jinja2 = "^3.1.6"
typer = "^0.15.2"
rich = "^14.0.0"
quantalogic-pythonbox = "^0.9.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
