[tool.poetry]
name = "quantalogic-codeact"
version = "0.100.0"
description = "CodeAct Agent."
authors = ["Raphael Mansuy <raphae.mansuy@quantalogic.app>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
pydantic = "^2.10.4"
docstring-parser = ">=0.15,<1.0"
litellm = "^1.73.6"
loguru = "^0.7.3"
lxml = "^5.3.2"
quantalogic-toolbox = ">=0.11.0"
jinja2 = "^3.1.5"
typer = "^0.15.2"
rich = "^13.9.4"
quantalogic-pythonbox = "^0.9.22"
nanoid = "^2.0.0"
requests = "^2.32.3"
click = "^8.1.8"
prompt-toolkit = "^3.0.48"
tenacity = "^9.0.0"
instructor = "^1.7.2"
pathspec = "^0.12.1"
python-dotenv = "^1.0.1"
typing-extensions = "^4.12.2"

[tool.poetry.scripts]
quantalogic_codeact = "quantalogic_codeact.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"