[tool.poetry]
name = "quantalogic-flow"
version = "0.6.2"
description = "Quantalogic Flow"
readme = "README.md"
authors = ["QuantaLogic Team <raphael.mansuy@quantalogic.app>"]
license = "MIT"
packages = [ { include = "quantalogic_flow" } ]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
loguru = "^0.7.3"
litellm = "^1.73.6"
instructor = "^1.7.2"
pathspec = "^0.12.1"
pydantic = "^2.10.4"
jinja2 = "^3.1.5"
typing-extensions = "^4.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
