[tool.poetry]
name = "quantalogic-toolbox"
version = "0.10.0"
description = "Reusable tool argument and base tool classes extracted from quantalogic."
authors = ["Raphael Mansuy <raphae.mansuy@quantalogic.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=1.10,<3.0"
docstring-parser = ">=0.15,<1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
