[tool.poetry]
name = "quantalogic-toolbox-files"
version = "0.4.1"
description = "A custom toolbox for Quantalogic"
authors = ["Raphael Mansuy <raphael.mansuy@quantalogic.app>"]
packages = [
  { include = "quantalogic_toolbox_files" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_toolbox_files" = "quantalogic_toolbox_files"