[tool.poetry]
name = "quantalogic-toolbox-math"
version = "0.16.0"
description = "Advanced math toolbox for Quantalogic Agent with symbolic and numerical operations."
authors = ["Raphael Mansuy <raphael.mansuy@quantalogic.app>"]
packages = [
    { include = "quantalogic_toolbox_math" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sympy = ">=1.12"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_toolbox_math" = "quantalogic_toolbox_math"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"