[tool.poetry]
name = "quantalogic_toolbox_mcp"
version = "0.5.52"
description = "A custom MCP Client for Quantalogic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quantalogic = ">0.60.0"
mcp = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_toolbox_mcp" = "quantalogic_toolbox_mcp.tools"