[tool.poetry]
name = "quantalogic_hacker_news"
version = "0.3.0"
description = "A custom toolbox for Quantalogic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quantalogic = ">=0.80.0"
aiohttp = "^3.11.16"
aiocache = ">=0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_hacker_news" = "quantalogic_hacker_news.tools"