[tool.poetry]
name = "quantalogic_planning_toolbox"
version = "0.2.0"
description = "A custom toolbox for Quantalogic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nanoid = "^2.0.0"
instructor = "^1.7.9"
litellm = "^1.65.4.post1"
quantalogic = {path = "/Users/raphaelmansuy/Github/03-working/quantalogic/dist/quantalogic-0.80.tar.gz"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_planning_toolbox" = "quantalogic_planning_toolbox.tools"