[tool.poetry]
name = "quantalogic_planning_toolbox"
version = "0.7.0"
description = "A custom toolbox for Quantalogic"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
nanoid = "^2.0.0"
instructor = "^1.7.2"
litellm = "^1.73.6"
pydantic = "^2.10.4"
typing-extensions = "^4.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."quantalogic.tools"]
"quantalogic_planning_toolbox" = "quantalogic_planning_toolbox"